mySplitter/J2K-Codec/include/j2k-codec.h


enum J2K_API_Error
{
	J2K_SUCCESS,
	J2K_NOT_ENOUGH_MEMORY,
	J2K_CORRUPTED_DATA,
	J2K_CANT_READ_DATA,
	J2K_INVALID_ARGUMENT,
	J2K_CANCELED,
	J2K_CANT_OPEN_FILE,
	J2K_OPTION_UNRECOGNIZED,
	J2K_NO_SUCH_TILE,
	J2K_NO_SUCH_RESOLUTION,
	J2K_BPP_TOO_SMALL,
	J2K_NOT_PART1_FORMAT,
	J2K_IMAGE_IS_TOO_LARGE,
	J2K_TOO_MANY_RES_LEVEL,
	J2K_TOO_LARGE_CODEBLOCKS,
	J2K_LAZINESS_NOT_SUPPORTED,
	J2K_VCAUSAL_NOT_SUPPORTED,
	J2K_TOO_MANY_COMPONENTS,
	J2K_BAD_COMPONENT_PRECISION,
	J2K_ONLY_UNSIG_COMPONENTS,
	J2K_DOWNSAMPLED_COMPONENTS,
	J2K_ROI_NOT_SUPPORTED,
	J2K_PROGR_CHANGE_NOT_SUP,
	J2K_64BIT_BOXES_NOT_SUP,
	J2K_INTERNAL_ERROR,

	J2K_MAX_ERRORS, // Total number of errors

	J2K_MAX_ERROR_LEN = 60 // Max error string length
};

typedef struct 
{
	int Width, Height;		// [out] Width and height of the image in pixels (by default).
							//       If "resolution" is set or tiles were selected - this will be set to the correct size

	int Components;			// [out] The number of components in the image
	int Resolutions;		// [out] Number of resolution levels for selected tiles (by default - the whole image is selected)
	int hTiles, vTiles;		// [out] The number of tiles in horizontal and vertical directions
	int Precision;			// [out] Component precision in bits. All components must have the same precision.
	int FileType;			// [out] The image file type (0 = Lossy J2K, 1 = Lossy JP2, 2 = Lossless J2K, 3 = Lossless JP2)
	int ColorInfo;			// [out] Color information (lowest 2 bits - MCT type, 3rd bit - indexed or not, highest 28 bits - color info) - see below

	int version;			// [in]  J2K-Codec version your program was developed for. Use J2K_VERSION to initialize this field
	int resolution;			// [in]  Resolution level. If it is >= Resolutions it will be set to the maximum available level

	unsigned char *buffer;	// [in]  Destination buffer
	int buffer_bpp;			// [in]  Destination buffer bytes-per-pixel value
	int buffer_pitch;		// [in]  Destination buffer pitch (distance in bytes between two vertical pixels)

	int reserved;			// Reserved

	void *j2k;				// Pointer to the internal class for this image

} J2K_Image;



/*/////////////////////////////////////////////////////////////////////////////////////////
// J2K_GetVersion()
//
// Returns codec version and build number in the 0x205678 form, where 20 is a version (2.0)
// and 0x5678 is a build number.
/////////////////////////////////////////////////////////////////////////////////////////*/

J2K_CODEC_API(int) J2K_GetVersion();

J2K_CODEC_API(void) J2K_GetErrorStrA(int code,  char   *str);

J2K_CODEC_API(void) J2K_UnlockA(const  char   *key);



/*/////////////////////////////////////////////////////////////////////////////////////////
// J2K_StartLogging() / J2K_StopLogging()
//                                                                                      
// These functions control the debug messages logging.
//
// J2K_StartLogging() returns J2K_SUCCESS if there was no error.
// NOTES: 
//  1. Log-file name is 'j2k-codec.log'
//  2. The performance will degrade significantly if the logging is on.
/////////////////////////////////////////////////////////////////////////////////////////*/

J2K_CODEC_API(int) J2K_StartLogging();

J2K_CODEC_API(void) J2K_StopLogging();


J2K_CODEC_API(int) J2K_OpenFileA(const  char   *filename, J2K_Image *image);


J2K_CODEC_API(int) J2K_OpenMemory(unsigned char *src_buffer, int src_size, J2K_Image *image);


/*/////////////////////////////////////////////////////////////////////////////////////////
// J2K_GetInfo()
//                                                                                      
// Gets various information about the image into J2K_Image structure.
// Returns J2K_SUCCESS or error code if function failed.
/////////////////////////////////////////////////////////////////////////////////////////*/

J2K_CODEC_API(int) J2K_GetInfo(J2K_Image *image);


J2K_CODEC_API(int) J2K_GetMetadata(J2K_Image *image, int no, int *type, unsigned char **data, int *size);



/*/////////////////////////////////////////////////////////////////////////////////////////
// J2K_SelectTiles()
//                                                                                      
// Selects or unselects a tile or a tile range, depending on 'action'.
// If action!=0 then the tiles are selected for decoding, otherwise - unselected.
// The range is defined by start and end tile numbers (inclusive) in the raster order.
// If end_tile==-1 then the max tile number will be used instead.
// Returns J2K_SUCCESS or error code if the function failed.
/////////////////////////////////////////////////////////////////////////////////////////*/

J2K_CODEC_API(int) J2K_SelectTiles(J2K_Image *image, int start_tile, int end_tile, int action);
	J2K_CODEC_API(int) J2K_DecodeA(J2K_Image *image, const  char   *options=NULL);
	J2K_CODEC_API(int) J2K_DecodeA(J2K_Image *image, const  char   *options);



/*/////////////////////////////////////////////////////////////////////////////////////////
// J2K_Close()
//                                                                                      
// Destroys the image previously created by J2K_Open(). All images must be closed using
// this function to avoid memory leaks.
/////////////////////////////////////////////////////////////////////////////////////////*/

J2K_CODEC_API(int) J2K_Close(J2K_Image *image);